# src/config/swagger.json
@@ -632,7 +632,21 @@
                         "name": "departmentId",
                         "required": true,
                         "type": "integer"
+                    },
+                    {
+                        "in": "query",
+                        "name": "from_date",
+                        "type": "string",
+                        "format": "date"
+
+                    },
+                    {
+                        "in": "query",
+                        "name": "to_date",
+                        "type": "string",
+                        "format": "date"
                     }
+
                 ],
                 "produces": [
                     "application/json",
